--- a/GroversAlgorithm/Backup/GroversAlgorithm.csproj
+++ b/GroversAlgorithm/Backup/GroversAlgorithm.csproj
@@ -1,14 +1,12 @@
-﻿<Project Sdk="Microsoft.Quantum.Sdk/0.15.2102129448" ToolsVersion="Current">
+﻿<Project Sdk="Microsoft.Quantum.Sdk/0.15.2102129448">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <PlatformTarget>x64</PlatformTarget>
     <IsPackable>false</IsPackable>
     <RootNamespace>Quantum.Kata.GroversAlgorithm</RootNamespace>
     <IQSharpLoadAutomatically>true</IQSharpLoadAutomatically>
-    <FileUpgradeFlags>40</FileUpgradeFlags>
-    <UpgradeBackupLocation>D:\School\Quantum Computing\QuantumKatas\GroversAlgorithm\Backup\</UpgradeBackupLocation>
-    <OldToolsVersion>2.0</OldToolsVersion>
   </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Quantum.Katas" Version="0.15.2102129448" />
     <PackageReference Include="Microsoft.Quantum.Xunit" Version="0.15.2102129448" />
@@ -17,6 +15,7 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
+
   <ItemGroup>
     <None Include="README.md" />
   </ItemGroup>
